--- a/public/style.css
+++ b/public/style.css
@@ -133,6 +133,10 @@ body:not(.topnav) {
   text-shadow: 0px 1px 0px #ffee66;
 }
 
+#googleLogin{
+  background-color:rgb(213, 75, 75);
+  color: rgb(255, 255, 255);
+}
 
 img {
   max-height: 100%;
