--- a/public/style.css
+++ b/public/style.css
@@ -96,8 +96,15 @@ body:not(.topnav) {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+.button_center {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+}
 .btn {
-  display: block;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
   font-family: 'Roboto Slab', serif;
@@ -123,7 +130,34 @@ body:not(.topnav) {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+.btnS {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Roboto Slab', serif;
+  font-size: 18px;
+  font-weight: bold;
+  background-color:rgb(204, 42, 42);
+  width: 160px;
+  padding: 12px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
 
+.btnS:hover, .btnS:focus, .btnS:active {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 #loginLink {
