Edited cart close in cart

--- a/public/style.css
+++ b/public/style.css
@@ -105,7 +105,7 @@ body:not(.topnav) {
   position: fixed;
   background-color: white;
   top: 0;
-  right: 0;
+  right: -100%;
   width: 360px;
   height: 100vh;
   overflow-y: auto;
@@ -192,11 +192,16 @@ body:not(.topnav) {
 }
 .btn-buy:hover {
   background-color: rgb(63, 115, 246);
-
 }
 .btn-sell:hover {
   background-color: rgb(63, 115, 246);
-  
+}
+#cart-close {
+  position: absolute;
+  top: 1rem;
+  right: .8rem;
+  font-size: 2rem;
+  cursor: pointer;
 }
 .image {
   display: block;
