--- a/public/style.css
+++ b/public/style.css
@@ -15,8 +15,7 @@ body:not(.topnav) {
   margin-left: auto;
   margin-right: auto;
 
-  background-color: rgb(255, 255, 255);
-}
+  background-color: rgb(44, 44, 54);}
 
 
 .topnav {
@@ -96,6 +95,19 @@ body:not(.topnav) {
   margin-right: auto;
 }
 
+.membership-container {
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 10rem;
+  height: auto;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 .splash-main-index {
   background-color: white;
@@ -151,9 +163,11 @@ body:not(.topnav) {
       background-origin: content-box;
 
 }
-img {
-  max-height: 100%;
-  width: auto;
+
+img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%
 }
 
 .below-splash-main {
