--- a/public/style.css
+++ b/public/style.css
@@ -321,7 +321,8 @@ body:not(.topnav) {
 }
 
 .below-splash-main>p {
-  padding-top: 5%;
+  padding-top: 10%;
+  text-align: center;
 }
 
 #contact-form-p {
