--- a/public/style.css
+++ b/public/style.css
@@ -344,10 +344,13 @@ body:not(.topnav) {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+  justify-content: center;
 }
 
 .below-splash-main>p {
   padding-top: 5%;
+  text-align: center;
+
 }
 
 #contact-form-p {
